Setup provider structure

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,15 +9,17 @@
          processIsolation="false"
          stopOnFailure="false"
 >
+    <php>
+        <ini name="error_reporting" value="-1"/>
+        <server name="SHELL_VERBOSITY" value="-1"/>
+        <server name="SYMFONY_PHPUNIT_REMOVE" value=""/>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[self]=0"/>
+        <env name="KERNEL_CLASS" value="IQ2i\AiMakerBundle\Tests\TestKernel"/>
+    </php>
+
     <testsuites>
         <testsuite name="AI Maker Bundle Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
-
-    <coverage>
-        <include>
-            <directory suffix=".php">src</directory>
-        </include>
-    </coverage>
 </phpunit>
