--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,19 @@
     ],
     "require": {
         "php": "^8.3",
-        "symfony/framework-bundle": "^6.4 || ^7.0",
-        "symfony/http-client": "^6.4 || ^7.0"
+        "symfony/config": "^6.4 || ^7.0",
+        "symfony/console": "^6.4 || ^7.0",
+        "symfony/dependency-injection": "^6.4 || ^7.0",
+        "symfony/http-client": "^6.4 || ^7.0",
+        "symfony/http-kernel": "^6.4 || ^7.0"
     },
     "require-dev": {
+        "doctrine/orm": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.75",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.1",
         "rector/rector": "^2.0.12",
-        "friendsofphp/php-cs-fixer": "^3.75"
+        "symfony/framework-bundle": "^6.4|^7.0"
     },
     "config": {
         "sort-packages": true
