--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,12 @@
     "require-dev": {
         "doctrine/orm": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.75",
-        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan": "2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^12.1",
         "rector/rector": "^2.0.12",
-        "symfony/framework-bundle": "^6.4|^7.0"
+        "symfony/framework-bundle": "^6.4|^7.0",
+        "symfony/maker-bundle": "^1.63"
     },
     "config": {
         "sort-packages": true
@@ -36,5 +38,7 @@
     },
     "autoload-dev": {
         "psr-4": { "IQ2i\\AiMakerBundle\\Tests\\": "tests" }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
