--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,3 +1,7 @@
+includes:
+    - vendor/phpstan/phpstan-symfony/extension.neon
+    - vendor/phpstan/phpstan-symfony/rules.neon
+
 parameters:
     level: 5
     paths:
